# my-etudes

./: README.md
LeanByExample/: LeanByExample.lean  Main.lean  README.md  (+3 more)
authz-service-with-openfga/openfga-client/: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md
authz-service-with-openfga/openfga-client/src/apis/: assertions_api.rs  authorization_models_api.rs  configuration.rs  mod.rs  relationship_queries_api.rs  relationship_tuples_api.rs  stores_api.rs
authz-service-with-openfga/openfga-client/src/models/: aborted_message_response.rs  any.rs  assertion.rs  assertion_tuple_key.rs  auth_error_code.rs  authorization_model.rs  batch_check_item.rs  batch_check_request.rs  batch_check_response.rs  batch_check_single_result.rs  check_error.rs  check_request.rs  check_request_tuple_key.rs  check_response.rs  computed.rs  condition.rs  condition_metadata.rs  condition_param_type_ref.rs  consistency_preference.rs  contextual_tuple_keys.rs  create_store_request.rs  create_store_response.rs  error_code.rs  expand_request.rs  expand_request_tuple_key.rs  expand_response.rs  forbidden_response.rs  get_store_response.rs  internal_error_code.rs  internal_error_message_response.rs  leaf.rs  list_objects_request.rs  list_objects_response.rs  list_stores_response.rs  list_users_request.rs  list_users_response.rs  metadata.rs  mod.rs  node.rs  nodes.rs  (+49 more)
authz-service-with-openfga/service/: Cargo.toml  authz-model.fga  authz-model.json
authz-service-with-openfga/service/src/: common.rs  folders.rs  main.rs
authz-service-with-openfga/service/src/folders/: mod.rs
(+205 files in other folders)
