[package]
name = "openfga-client"
version = "1.0.0"
authors = ["community@openfga.dev"]
description = "A high performance and flexible authorization/permission engine built for developers and inspired by Google Zanzibar."
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
[features]
