[package]
name = "authz-service-with-openfga"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
axum = "0.7"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
openfga-client.workspace = true
uuid = { version = "1.11.0", features = ["v7"] }
